[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-test-gen"
version = "1.0.0"
description = "AI-powered unit test generator for code files."
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
ai-test-gen = "ai_test_gen.main:cli"

[tool.setuptools.packages.find]
include = ["ai_test_gen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
